# CSL-final-project

./: .gitignore
01-convolution-project/: 01-build.sh  01-speed-comparison.ipynb  02-object-detection.ipynb  02-run.sh  03-build-run.sh  11-speed-comparison.ipynb  12-object-detection.ipynb  13-cnn-pneumonia.ipynb  Makefile  Untitled.ipynb  object-detection.ipynb  project-report.ipynb  speed-comparison.ipynb
01-convolution-project/include/: cli.h  cnn_inference.h  constants.h  conv2d.h  functional_test.h  infer_test.h  io.h  kernel_factory.h  speed_test.h  utility.h
01-convolution-project/src/: cli.cpp  cnn_inference.cpp  conv2d.cpp  conv2d_avx.cpp  conv2d_baseline.cpp  conv2d_sse.cpp  functional_test.cpp  infer_test.cpp  io.cpp  kernel_factory.cpp  main.cpp  speed_test.cpp  utility.cpp
02-mobile-project/app/src/main/: AndroidManifest.xml
02-mobile-project/app/src/main/cpp/: 01-build.sh  CMakeLists.txt  native-lib.cpp  physics.S
02-mobile-project/app/src/main/java/com/example/game/: GameView.java  MainActivity.java  MenuView.java
02-mobile-project/scripts/: 01-build-libgameso.sh  02-build-apk.sh  03-sign-install-apk.sh  04-build-install.sh  release-key.jks
